Try using virtual threads for executor